添加evaluate.py代码，主要是为了计算老师四分类任务中每个类别的precision,recall,f1和总的accuracy,

--- a/test.ipynb
+++ b/test.ipynb
@@ -399,51 +399,104 @@
    "id": "40f1d1efbd7171e4"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-03T02:22:49.036325Z",
+     "start_time": "2024-09-03T02:22:49.029789Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import re\n",
+    "\n",
+    "text = '''\n",
+    "根据您的要求，以下是对老师话语的分析：\n",
+    "\n",
+    "[\n",
+    "  {\"type\": \"发起\", \"content\": \"请袁艺喊“开始上课”，声音要响亮啊。\"},\n",
+    "  {\"type\": \"其它\", \"content\": \"同学们好，请坐。真棒。昨天呀，我们一起学习了课文八。今天，小猴子呀要到我们班来做客了。我们来跟他打打招呼。“猴子”。\"},\n",
+    "  {\"type\": \"讲解\", \"content\": \"昨天在写作业的时候呀，小朋友要注意哦。这个“猴”，反犬旁，旁边是一个单立人，中间有没有一个短竖啊？那么昨天在作业当中，方老师看到有人加了一竖，那就不对了，变成错别字了。明白了吗？好，现在用眼睛看，用心记住这个字，“猴子”。\"},\n",
+    "  {\"type\": \"发起\", \"content\": \"哎，每天通过学习啊，我们知道了这个猴子啊，种了一些果树。它分别种了什么树呢？谁来说说？\"},\n",
+    "  {\"type\": \"发起\", \"content\": \"于凯，你来说说看。\"},\n",
+    "  {\"type\": \"其它\", \"content\": \"你慢讲啊。嗯，\"},\n",
+    "  {\"type\": \"发起\", \"content\": \"然后呢？\"},\n",
+    "  {\"type\": \"讲解\", \"content\": \"然后种了杏树。最后呢？最后还种了桃树。到最后怎么样啊？\"},\n",
+    "  {\"type\": \"发起\", \"content\": \"好，于凯，你能不能连起来把这句话来说一说？“猴子种了”。\"},\n",
+    "  {\"type\": \"评价\", \"content\": \"非常棒，请坐。\"},\n",
+    "  {\"type\": \"讲解\", \"content\": \"我们像他一样，用一句话把这个故事，哎，就讲出来了。来，我们一起来试试看。“猴子种了”。\"},\n",
+    "  {\"type\": \"评价\", \"content\": \"瞧，咱们一句话就能把故事的意思讲出来了。小朋友们真能干。\"},\n",
+    "  {\"type\": \"讲解\", \"content\": \"好，那我们来看看哦，他为什么什么都没种成呢？我们来读课文的第一段。\"},\n",
+    "  {\"type\": \"发起\", \"content\": \"来，谁来读？那等一下啊。好，你来读。“猴子”。\"},\n",
+    "  {\"type\": \"其它\", \"content\": \"嗯嗯，你先不要坐下，这个“天天”说明什么呀？\"}\n",
+    "]\n",
+    "'''\n",
+    "\n",
+    "matches = re.findall(r'\\[.*\\]', text, re.DOTALL)\n",
+    "\n",
+    "print(type(matches[0]))\n"
+   ],
+   "id": "d118682769308449",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-03T02:23:13.518413Z",
+     "start_time": "2024-09-03T02:23:13.513413Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import json\n",
+    "json.loads(matches[0])"
+   ],
+   "id": "db63e2887d667879",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'type': '发起', 'content': '请袁艺喊“开始上课”，声音要响亮啊。'},\n",
+       " {'type': '其它',\n",
+       "  'content': '同学们好，请坐。真棒。昨天呀，我们一起学习了课文八。今天，小猴子呀要到我们班来做客了。我们来跟他打打招呼。“猴子”。'},\n",
+       " {'type': '讲解',\n",
+       "  'content': '昨天在写作业的时候呀，小朋友要注意哦。这个“猴”，反犬旁，旁边是一个单立人，中间有没有一个短竖啊？那么昨天在作业当中，方老师看到有人加了一竖，那就不对了，变成错别字了。明白了吗？好，现在用眼睛看，用心记住这个字，“猴子”。'},\n",
+       " {'type': '发起', 'content': '哎，每天通过学习啊，我们知道了这个猴子啊，种了一些果树。它分别种了什么树呢？谁来说说？'},\n",
+       " {'type': '发起', 'content': '于凯，你来说说看。'},\n",
+       " {'type': '其它', 'content': '你慢讲啊。嗯，'},\n",
+       " {'type': '发起', 'content': '然后呢？'},\n",
+       " {'type': '讲解', 'content': '然后种了杏树。最后呢？最后还种了桃树。到最后怎么样啊？'},\n",
+       " {'type': '发起', 'content': '好，于凯，你能不能连起来把这句话来说一说？“猴子种了”。'},\n",
+       " {'type': '评价', 'content': '非常棒，请坐。'},\n",
+       " {'type': '讲解', 'content': '我们像他一样，用一句话把这个故事，哎，就讲出来了。来，我们一起来试试看。“猴子种了”。'},\n",
+       " {'type': '评价', 'content': '瞧，咱们一句话就能把故事的意思讲出来了。小朋友们真能干。'},\n",
+       " {'type': '讲解', 'content': '好，那我们来看看哦，他为什么什么都没种成呢？我们来读课文的第一段。'},\n",
+       " {'type': '发起', 'content': '来，谁来读？那等一下啊。好，你来读。“猴子”。'},\n",
+       " {'type': '其它', 'content': '嗯嗯，你先不要坐下，这个“天天”说明什么呀？'}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "{\n",
-    "    \"result\": [\n",
-    "\n",
-    "{\"type\": \"发起\", \"content\": \"同桌如果讲喜趣的话呢？那要反过来讲。\"},\n",
-    "\n",
-    "{\"type\": \"其它\", \"content\": \"等一会下课再出去，啊？\"},\n",
-    "\n",
-    "{\"type\": \"发起\", \"content\": \"是不是讲得差不多了？来，小乌鸦来试试。\"},\n",
-    "\n",
-    "{\"type\": \"其它\", \"content\": \"那等一会儿吧，我们毕竟有三十八个同学在等你们两个，那太不好了啊。那再给你一点时间啊。\"},\n",
-    "\n",
-    "{\"type\": \"评价\", \"content\": \"哎，你们很好，尊重其他同学啊。\"},\n",
-    "\n",
-    "{\"type\": \"发起\", \"content\": \"好，谁来试试？我们先请小乌鸦，好吧？谁是刚刚练了小乌鸦的话？好，王子辰，\"},\n",
-    "\n",
-    "{\"type\": \"评价\", \"content\": \"这只乌鸦怎么样，好不好哦？好厉害啊，这么一段话他都能够讲的啊，真的像故事里森林里那只飞来的小乌鸦。如果我们是猴哥的话，肯定是怎么样？要听他的话，非常好啊。下课方老师要给你敲个章，别忘了啊。\"},\n",
-    "\n",
-    "{\"type\": \"发起\", \"content\": \"好，哪只小乌鸦再来试试？\"},\n",
-    "\n",
-    "{\"type\": \"发起\", \"content\": \"还可以加动作啊。\"},\n",
-    "\n",
-    "{\"type\": \"评价\", \"content\": \"对嘛吧，这种动作加上就更好了啊。\"},\n",
-    "\n",
-    "{\"type\": \"讲解\", \"content\": \"因为讲故事嘛，不要一本正经，是不是？可以表演一些动作，表情行都可以出来啊。\"},\n",
-    "\n",
-    "{\"type\": \"发起\", \"content\": \"好，你来试试，我们在讲乌鸦。好的，等一会请你好不好？\"},\n",
-    "\n",
-    "{\"type\": \"发起\", \"content\": \"好，你这样吧，你上来吧，好不好？我上来讲好不好？来，掌声鼓励一起。\"},\n",
-    "\n",
-    "{\"type\": \"评价\", \"content\": \"哎呦，你看这只小乌鸦，你看一边飞，一边叫，好辛苦啊。\"},\n",
-    "\n",
-    "{\"type\": \"发起\", \"content\": \"来，给他鼓励一点，有没有给他好的建议？\"},\n",
-    "\n",
-    "{\"type\": \"讲解\", \"content\": \"不要一直飞，是不是啊？可以怎么样？可以换换其他动作。比如说梨五杏四啊，梨树要等五年才能结果。你有这个耐心吗？可以这种动作做出来，好不好？\"},\n",
-    "\n",
-    "{\"type\": \"评价\", \"content\": \"哎呦，好样的啊，能不能更好一点了？\"}\n",
-    "    ]\n",
-    "}"
-   ],
-   "id": "d118682769308449"
+   "source": "",
+   "id": "4c43d8de8069e9d0"
   }
  ],
  "metadata": {
