添加glm4_api.py，qwen_long.py的代码，并且在evaluate.py中也添加了相关的模型处理。

--- a/test.ipynb
+++ b/test.ipynb
@@ -491,12 +491,189 @@
    "execution_count": 8
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-03T09:25:32.511879Z",
+     "start_time": "2024-09-03T09:25:32.389959Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from tqdm import tqdm\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "from difflib import SequenceMatcher\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "df = pd.read_excel(\"data/726四分类法.xlsx\")\n",
+    "cloumn = \"qwen\"\n",
+    "\n",
+    "\n",
+    "def similarity(sent1, sent2):\n",
+    "    return SequenceMatcher(None, sent1, sent2).ratio()\n",
+    "\n",
+    "\n",
+    "def split_sentences(data):\n",
+    "    split_data = []\n",
+    "    for item in data:\n",
+    "        # 使用正则表达式分割句子\n",
+    "        sentences = re.split(r'[？。]', item['content'])\n",
+    "        for sentence in sentences:\n",
+    "            if sentence:  # 忽略空字符串\n",
+    "                split_data.append({'type': item['type'], 'content': sentence})\n",
+    "    return split_data\n",
+    "\n",
+    "\n",
+    "gpt4o_output = []\n",
+    "glm4_output = []\n",
+    "qwen_output = []\n",
+    "manual_label = []\n",
+    "for i in tqdm(range(0, len(df))):\n",
+    "    # print(i)\n",
+    "    manual = json.loads(df.loc[i, 'label'])\n",
+    "    split_data_manual = split_sentences(manual)\n",
+    "    if cloumn == 'gpt4':\n",
+    "        gpt4o = json.loads(df.loc[i, 'gpt4o_predict']).get(\"result\")\n",
+    "        split_data_gpt4o_output = split_sentences(gpt4o)\n",
+    "        for item in split_data_gpt4o_output:\n",
+    "            for sent in split_data_manual:\n",
+    "\n",
+    "                if similarity(item.get(\"content\"), sent.get(\"content\")) > 0.5:\n",
+    "                    item['label'] = sent.get(\"type\")\n",
+    "                    item['manual_content'] = sent.get(\"content\")\n",
+    "                    break  # 如果匹配上了，就不要再往下匹配了。\n",
+    "\n",
+    "        gpt4o_output.extend(split_data_gpt4o_output)\n",
+    "\n",
+    "    elif cloumn == 'glm4':\n",
+    "        glm4 = json.loads(df.loc[i, 'glm4_predict'])\n",
+    "        split_data_glm4_output = split_sentences(glm4)\n",
+    "\n",
+    "        for item in split_data_glm4_output:\n",
+    "            for sent in split_data_manual:\n",
+    "\n",
+    "                if similarity(item.get(\"content\"), sent.get(\"content\")) > 0.5:\n",
+    "                    item['label'] = sent.get(\"type\")\n",
+    "                    item['manual_content'] = sent.get(\"content\")\n",
+    "                    break  # 如果匹配上了，就不要再往下匹配了。\n",
+    "\n",
+    "        glm4_output.extend(split_data_glm4_output)\n",
+    "    elif cloumn == 'qwen':\n",
+    "        qwen = json.loads(df.loc[i, 'qwen_predict'])\n",
+    "        split_data_qwen_output = split_sentences(qwen)\n",
+    "        for item in split_data_qwen_output:\n",
+    "            for sent in split_data_manual:\n",
+    "                if similarity(item.get(\"content\"), sent.get(\"content\")) > 0.5:\n",
+    "                    item['label'] = sent.get(\"type\")\n",
+    "                    item['manual_content'] = sent.get(\"content\")\n",
+    "                    break\n",
+    "\n",
+    "\n",
+    "# 定义一个包含四个必要键值的列表\n",
+    "required_keys = ['type', 'content', 'label', 'manual_content']"
+   ],
+   "id": "4c43d8de8069e9d0",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 11/11 [00:00<00:00, 117.21it/s]\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-03T09:25:33.331934Z",
+     "start_time": "2024-09-03T09:25:33.314860Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "qwen_output",
+   "id": "5b18bd8927ba3e4f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-03T09:25:04.050289Z",
+     "start_time": "2024-09-03T09:25:04.037238Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "for item in qwen_output:\n",
+    "    for key in required_keys:\n",
+    "        if key not in item:\n",
+    "            item[key] = ''\n",
+    "print(qwen_output)\n",
+    "\n"
+   ],
+   "id": "bf5e9efc1cd52b16",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "4c43d8de8069e9d0"
+   "id": "d3a3de9ec826caf4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "ae0073419f58fc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "df = pd.DataFrame(qwen_output)\n",
+    "print(df)\n",
+    "df = df[(df != '').all(axis=1)]\n",
+    "print(df)\n",
+    "df_cleaned = df.dropna(subset='label').reset_index(drop=True)\n",
+    "\n",
+    "df_cleaned['type'] = df_cleaned['type'].replace(\"其他\", \"其它\")\n",
+    "df_cleaned['label'] = df_cleaned['label'].replace(\"其他\", \"其它\")\n",
+    "df_cleaned.to_excel(\"data/qwen_T_4_result.xlsx\", index=False)\n",
+    "# 计算分类报告\n",
+    "classification_rep = classification_report(df_cleaned['label'], df_cleaned['type'], zero_division=0)\n",
+    "print(classification_rep)"
+   ],
+   "id": "3c432721afb53edf"
   }
  ],
  "metadata": {
