修改glm4、gpt4、qwen的读取路径。生成qwen_72B_predict文件，并标注发起和评价有误的部分

--- a/test.ipynb
+++ b/test.ipynb
@@ -1248,6 +1248,348 @@
     "]"
    ],
    "id": "2061a600e4c4ed89"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-05T09:29:12.579029Z",
+     "start_time": "2024-09-05T09:29:12.285341Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import pandas as pd",
+   "id": "8d3191243d12da38",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-05T09:29:53.099676Z",
+     "start_time": "2024-09-05T09:29:52.958628Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df = pd.read_excel(\"data/726四分类法.xlsx\")",
+   "id": "5bfca0e8073984da",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-05T09:29:59.359375Z",
+     "start_time": "2024-09-05T09:29:59.347653Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df",
+   "id": "dee8dce9fb80d45",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                                 原始文本  \\\n",
+       "0   请袁艺喊开始上课， 声音要响亮啊，同学们好，请坐真棒， 昨天呀，我们一起学习了课文八。 今天...   \n",
+       "1   嗯，细心，还有呢，他每天都去浇，天天都去浇水施肥，说明他怎么样，对，非常勤劳，猴子是不是很勤...   \n",
+       "2   好的，你连叫两声， 猴哥给我听听，哎，猴哥听见了来，我们学着他的样子， 小乌鸦们叫两声猴哥，...   \n",
+       "3    哪知小乌鸦再来试试看，再来劝劝猴哥，你来，欢迎陈一坤，哎，这只小乌鸦讲的好不好？非常棒， ...   \n",
+       "4   真的是男孩子今天读的真好， 而且很多女孩子也在认真听，我也要表扬， 非常好啊，来同学们，你们...   \n",
+       "5   好，把三句话来说一说， 我再问乌鸦对猴子说的最后一句话是什么，好喜鹊对猴子说的最后一句话， ...   \n",
+       "6   同桌如果讲喜趣的话呢， 那要反过来讲， 等一会下课再出去，啊， 是不是讲得差不多了，来小乌鸦...   \n",
+       "7   能够把故事讲用一个，第二个能加上动作，来来第三个能不能表演的更好，哎， 加上表情啊，你来试试...   \n",
+       "8   不行，你按照老师的要求去做， 请坐，要批评， 你等会儿三十秒的话都到我这来，一定要积极思考，...   \n",
+       "9   乌鸦说过了，咱们不重复， 你不着急吗？ 意思就是说你会着急的，是不是啊意思一样啊，好，很好，...   \n",
+       "10  你有什么话， 想对他说说，汤子晨，你说，嗯，请坐，不要光听别人要有自己的想法，是不是，好，你...   \n",
+       "\n",
+       "                                                 text  \\\n",
+       "0   请袁艺喊“开始上课”，声音要响亮啊。同学们好，请坐。真棒。昨天呀，我们一起学习了课文八。今天...   \n",
+       "1   嗯，细心。还有呢？他每天都去浇，天天都去浇水施肥。说明他怎么样？对，非常勤劳。猴子是不是很勤...   \n",
+       "2   好的，你连叫两声。猴哥，给我听听。哎，猴哥听见了。来，我们学着他的样子。小乌鸦们，叫两声猴哥...   \n",
+       "3   哪知小乌鸦再来试试看，再来劝劝猴哥。你来，欢迎陈一坤。哎，这只小乌鸦讲的好不好？非常棒，真好...   \n",
+       "4   真的是男孩子今天读的真好，而且很多女孩子也在认真听，我也要表扬，非常好啊。来，同学们，你们来...   \n",
+       "5   好，把三句话来说一说。我再问乌鸦对猴子说的最后一句话是什么。好，喜鹊对猴子说的最后一句话。杜...   \n",
+       "6   同桌如果讲喜趣的话呢？那要反过来讲。等一会下课再出去，啊？是不是讲得差不多了？来，小乌鸦来试...   \n",
+       "7   能够把故事讲用一个。第二个能加上动作。来来，第三个能不能表演得更好？哎，加上表情啊。你来试试...   \n",
+       "8   不行，你按照老师的要求去做。请坐。要批评。你等会儿三十秒的话都到我这来。一定要积极思考，不是...   \n",
+       "9   乌鸦说过了，咱们不重复。你不着急吗？意思就是说你会着急的，是不是啊？意思一样啊。好，很好，掌...   \n",
+       "10  你有什么话，想对他说说？汤子晨，你说。嗯，请坐。不要光听别人，要有自己的想法，是不是？好，你...   \n",
+       "\n",
+       "                                                label  \\\n",
+       "0   [\\n{\"type\": \"发起\", \"content\": \"请袁艺喊“开始上课”，声音要响亮...   \n",
+       "1   [\\n{\"type\": \"评价\", \"content\": \"嗯，细心。\"},\\n{\"type...   \n",
+       "2   [\\n{\\n\"type\":\"发起\",\\n\"content\":\"好的，你连叫两声。猴哥，给我听...   \n",
+       "3   [\\n{\"type\": \"发起\", \"content\": \"哪知小乌鸦再来试试看，再来劝劝猴...   \n",
+       "4   [\\n    {\"type\": \"评价\", \"content\": \"真的是男孩子今天读的真好...   \n",
+       "5   [\\n    {\"type\":\"发起\",\"content\":\"好，把三句话来说一说。\"},\\...   \n",
+       "6   [\\n    {\"type\": \"发起\", \"content\": \"同桌如果讲喜趣的话呢？那...   \n",
+       "7   [\\n    {\"type\": \"发起\", \"content\": \"能够把故事讲得用一个。第...   \n",
+       "8   [\\n{\\n\"type\":\"评价\",\\n\"content\":\"不行，你按照老师的要求去做。\"...   \n",
+       "9   [\\n{\"type\": \"其它\", \"content\": \"乌鸦说过了，咱们不重复。\"},\\...   \n",
+       "10  [\\n{\\n\"type\": \"发起\",\\n\"content\": \"你有什么话，想对他说说？汤...   \n",
+       "\n",
+       "                                        gpt4o_predict  \\\n",
+       "0   {\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\"...   \n",
+       "1   {\\n  \"result\": [\\n    {\"type\": \"评价\", \"content\"...   \n",
+       "2   {\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\"...   \n",
+       "3   {\\n  \"result\": [\\n    {\"type\": \"讲解\", \"content\"...   \n",
+       "4   {\\n  \"result\": [\\n    {\"type\": \"评价\", \"content\"...   \n",
+       "5   {\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\"...   \n",
+       "6   {\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\"...   \n",
+       "7   {\\n  \"result\": [\\n    {\\n\\n\"type\": \"发起\",\\n\\n\"c...   \n",
+       "8   {\\n  \"result\": [\\n    {\\n\\n\"type\": \"其它\",\\n\\n\"c...   \n",
+       "9   {\\n  \"result\": [\\n    {\\n\\n\"type\": \"讲解\",\\n\\n\"c...   \n",
+       "10  {\\n  \"result\": [\\n    {\\n\\n\"type\": \"发起\",\\n\\n\"c...   \n",
+       "\n",
+       "                                         glm4_predict  \\\n",
+       "0   [\\n  {\"type\": \"发起\", \"content\": \"请袁艺喊“开始上课”，声音要...   \n",
+       "1   [\\n  {\"type\": \"评价\", \"content\": \"嗯，细心。\"},\\n  {\"...   \n",
+       "2   [\\n  {\"type\": \"发起\", \"content\": \"好的，你连叫两声。猴哥，给我...   \n",
+       "3   [\\n  {\"type\": \"发起\", \"content\": \"哪知小乌鸦再来试试看，再来劝...   \n",
+       "4   [\\n  {\"type\": \"评价\", \"content\": \"真的是男孩子今天读的真好，而...   \n",
+       "5   [\\n  {\"type\": \"发起\", \"content\": \"好，把三句话来说一说。\"},...   \n",
+       "6   [\\n  {\"type\": \"发起\", \"content\": \"同桌如果讲喜趣的话呢？那要反...   \n",
+       "7   [{\"type\":\"讲解\",\"content\":\"能够把故事讲用一个。第二个能加上动作。\"}...   \n",
+       "8   [\\n  {\"type\": \"发起\", \"content\": \"不行，你按照老师的要求去做。...   \n",
+       "9   [\\n  {\"type\": \"发起\", \"content\": \"乌鸦说过了，咱们不重复。你不...   \n",
+       "10  [\\n  {\"type\": \"发起\", \"content\": \"你有什么话，想对他说说？\"}...   \n",
+       "\n",
+       "                                         qwen_predict  \\\n",
+       "0   [\\n  {\"type\":\"其它\",\"content\":\"请袁艺喊‘开始上课’，声音要响亮啊...   \n",
+       "1   [\\n  {\"type\":\"其它\", \"content\":\"嗯，细心。\"},\\n  {\"ty...   \n",
+       "2   [\\n  {\"type\":\"发起\",\"content\":\"好的，你连叫两声。猴哥，给我听听。...   \n",
+       "3   [\\n  {\"type\":\"发起\",\"content\":\"哪知小乌鸦再来试试看，再来劝劝猴哥...   \n",
+       "4   [\\n  {\"type\":\"评价\",\"content\":\"真的是男孩子今天读的真好，而且很多...   \n",
+       "5   [\\n  {\"type\":\"发起\",\"content\":\"好，把三句话来说一说。\"},\\n ...   \n",
+       "6   [\\n  {\"type\":\"讲解\",\"content\":\"同桌如果讲喜趣的话呢？那要反过来讲...   \n",
+       "7   [\\n  {\"type\":\"发起\",\"content\":\"能够把故事讲用一个。\"},\\n  ...   \n",
+       "8   [\\n  {\"type\":\"其它\", \"content\":\"不行，你按照老师的要求去做。请坐...   \n",
+       "9   [\\n  {\"type\":\"其它\", \"content\":\"乌鸦说过了，咱们不重复。你不着急...   \n",
+       "10  [\\n  {\"type\":\"发起\",\"content\":\"你有什么话，想对他说说？汤子晨，你...   \n",
+       "\n",
+       "                                     qwen_72B_predict  \\\n",
+       "0   \\n[\\n{\"type\":\"发起\",\"content\":\"请袁艺喊‘开始上课’，声音要响亮啊...   \n",
+       "1   [\\n  {\"type\": \"其它\", \"content\": \"嗯，细心。\"},\\n  {\"...   \n",
+       "2   [\\n{\"type\":\"发起\",\"content\":\"好的，你连叫两声。\"},\\n{\"typ...   \n",
+       "3   [\\n  {\"type\": \"发起\", \"content\": \"哪知小乌鸦再来试试看，再来劝...   \n",
+       "4   [\\n{\"type\":\"评价\",\"content\":\"真的是男孩子今天读的真好，而且很多女孩...   \n",
+       "5   [\\n{\"type\":\"发起\",\"content\":\"好，把三句话来说一说。\"},\\n{\"t...   \n",
+       "6   [\\n  {\"type\": \"讲解\", \"content\": \"同桌如果讲喜趣的话呢？那要反...   \n",
+       "7   [\\n  {\"type\": \"发起\", \"content\": \"能够把故事讲用一个。第二个能...   \n",
+       "8   \\n{\"type\":\"评价\",\"content\":\"不行，你按照老师的要求去做。要批评。\"}...   \n",
+       "9   [\\n{\"type\":\"讲解\",\"content\":\"乌鸦说过了，咱们不重复。\"},\\n{\"...   \n",
+       "10  [\\n  {\"type\": \"发起\", \"content\": \"你有什么话，想对他说说？汤子...   \n",
+       "\n",
+       "                                     qwen_max_predict  \n",
+       "0   \\n[\\n  {\"type\": \"发起\", \"content\": \"请袁艺喊“开始上课”，声...  \n",
+       "1   \\n[\\n  {\"type\": \"评价\", \"content\": \"嗯，细心。\"},\\n  ...  \n",
+       "2   \\n[\\n  {\"type\": \"其它\", \"content\": \"好的，你连叫两声。\"},...  \n",
+       "3   \\n[\\n  {\"type\": \"发起\", \"content\": \"你来，欢迎陈一坤。\"},...  \n",
+       "4   \\n[\\n  {\"type\": \"评价\", \"content\": \"真的是男孩子今天读的真好...  \n",
+       "5   \\n[\\n  {\"type\": \"发起\", \"content\": \"好，把三句话来说一说。\"...  \n",
+       "6   \\n[\\n  {\"type\": \"发起\", \"content\": \"同桌如果讲喜趣的话呢？那...  \n",
+       "7   \\n[\\n  {\"type\": \"发起\", \"content\": \"能够把故事讲用一个。第二...  \n",
+       "8   \\n[\\n  {\"type\": \"批评\", \"content\": \"不行，你按照老师的要求去...  \n",
+       "9   \\n[\\n  {\"type\": \"发起\", \"content\": \"你不着急吗？意思就是说你...  \n",
+       "10  \\n[\\n  {\"type\": \"发起\", \"content\": \"你有什么话，想对他说说？...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>原始文本</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>gpt4o_predict</th>\n",
+       "      <th>glm4_predict</th>\n",
+       "      <th>qwen_predict</th>\n",
+       "      <th>qwen_72B_predict</th>\n",
+       "      <th>qwen_max_predict</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>请袁艺喊开始上课， 声音要响亮啊，同学们好，请坐真棒， 昨天呀，我们一起学习了课文八。 今天...</td>\n",
+       "      <td>请袁艺喊“开始上课”，声音要响亮啊。同学们好，请坐。真棒。昨天呀，我们一起学习了课文八。今天...</td>\n",
+       "      <td>[\\n{\"type\": \"发起\", \"content\": \"请袁艺喊“开始上课”，声音要响亮...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\"...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"请袁艺喊“开始上课”，声音要...</td>\n",
+       "      <td>[\\n  {\"type\":\"其它\",\"content\":\"请袁艺喊‘开始上课’，声音要响亮啊...</td>\n",
+       "      <td>\\n[\\n{\"type\":\"发起\",\"content\":\"请袁艺喊‘开始上课’，声音要响亮啊...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"发起\", \"content\": \"请袁艺喊“开始上课”，声...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>嗯，细心，还有呢，他每天都去浇，天天都去浇水施肥，说明他怎么样，对，非常勤劳，猴子是不是很勤...</td>\n",
+       "      <td>嗯，细心。还有呢？他每天都去浇，天天都去浇水施肥。说明他怎么样？对，非常勤劳。猴子是不是很勤...</td>\n",
+       "      <td>[\\n{\"type\": \"评价\", \"content\": \"嗯，细心。\"},\\n{\"type...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\"type\": \"评价\", \"content\"...</td>\n",
+       "      <td>[\\n  {\"type\": \"评价\", \"content\": \"嗯，细心。\"},\\n  {\"...</td>\n",
+       "      <td>[\\n  {\"type\":\"其它\", \"content\":\"嗯，细心。\"},\\n  {\"ty...</td>\n",
+       "      <td>[\\n  {\"type\": \"其它\", \"content\": \"嗯，细心。\"},\\n  {\"...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"评价\", \"content\": \"嗯，细心。\"},\\n  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>好的，你连叫两声， 猴哥给我听听，哎，猴哥听见了来，我们学着他的样子， 小乌鸦们叫两声猴哥，...</td>\n",
+       "      <td>好的，你连叫两声。猴哥，给我听听。哎，猴哥听见了。来，我们学着他的样子。小乌鸦们，叫两声猴哥...</td>\n",
+       "      <td>[\\n{\\n\"type\":\"发起\",\\n\"content\":\"好的，你连叫两声。猴哥，给我听...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\"...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"好的，你连叫两声。猴哥，给我...</td>\n",
+       "      <td>[\\n  {\"type\":\"发起\",\"content\":\"好的，你连叫两声。猴哥，给我听听。...</td>\n",
+       "      <td>[\\n{\"type\":\"发起\",\"content\":\"好的，你连叫两声。\"},\\n{\"typ...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"其它\", \"content\": \"好的，你连叫两声。\"},...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>哪知小乌鸦再来试试看，再来劝劝猴哥，你来，欢迎陈一坤，哎，这只小乌鸦讲的好不好？非常棒， ...</td>\n",
+       "      <td>哪知小乌鸦再来试试看，再来劝劝猴哥。你来，欢迎陈一坤。哎，这只小乌鸦讲的好不好？非常棒，真好...</td>\n",
+       "      <td>[\\n{\"type\": \"发起\", \"content\": \"哪知小乌鸦再来试试看，再来劝劝猴...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\"type\": \"讲解\", \"content\"...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"哪知小乌鸦再来试试看，再来劝...</td>\n",
+       "      <td>[\\n  {\"type\":\"发起\",\"content\":\"哪知小乌鸦再来试试看，再来劝劝猴哥...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"哪知小乌鸦再来试试看，再来劝...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"发起\", \"content\": \"你来，欢迎陈一坤。\"},...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>真的是男孩子今天读的真好， 而且很多女孩子也在认真听，我也要表扬， 非常好啊，来同学们，你们...</td>\n",
+       "      <td>真的是男孩子今天读的真好，而且很多女孩子也在认真听，我也要表扬，非常好啊。来，同学们，你们来...</td>\n",
+       "      <td>[\\n    {\"type\": \"评价\", \"content\": \"真的是男孩子今天读的真好...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\"type\": \"评价\", \"content\"...</td>\n",
+       "      <td>[\\n  {\"type\": \"评价\", \"content\": \"真的是男孩子今天读的真好，而...</td>\n",
+       "      <td>[\\n  {\"type\":\"评价\",\"content\":\"真的是男孩子今天读的真好，而且很多...</td>\n",
+       "      <td>[\\n{\"type\":\"评价\",\"content\":\"真的是男孩子今天读的真好，而且很多女孩...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"评价\", \"content\": \"真的是男孩子今天读的真好...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>好，把三句话来说一说， 我再问乌鸦对猴子说的最后一句话是什么，好喜鹊对猴子说的最后一句话， ...</td>\n",
+       "      <td>好，把三句话来说一说。我再问乌鸦对猴子说的最后一句话是什么。好，喜鹊对猴子说的最后一句话。杜...</td>\n",
+       "      <td>[\\n    {\"type\":\"发起\",\"content\":\"好，把三句话来说一说。\"},\\...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\"...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"好，把三句话来说一说。\"},...</td>\n",
+       "      <td>[\\n  {\"type\":\"发起\",\"content\":\"好，把三句话来说一说。\"},\\n ...</td>\n",
+       "      <td>[\\n{\"type\":\"发起\",\"content\":\"好，把三句话来说一说。\"},\\n{\"t...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"发起\", \"content\": \"好，把三句话来说一说。\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>同桌如果讲喜趣的话呢， 那要反过来讲， 等一会下课再出去，啊， 是不是讲得差不多了，来小乌鸦...</td>\n",
+       "      <td>同桌如果讲喜趣的话呢？那要反过来讲。等一会下课再出去，啊？是不是讲得差不多了？来，小乌鸦来试...</td>\n",
+       "      <td>[\\n    {\"type\": \"发起\", \"content\": \"同桌如果讲喜趣的话呢？那...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\"...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"同桌如果讲喜趣的话呢？那要反...</td>\n",
+       "      <td>[\\n  {\"type\":\"讲解\",\"content\":\"同桌如果讲喜趣的话呢？那要反过来讲...</td>\n",
+       "      <td>[\\n  {\"type\": \"讲解\", \"content\": \"同桌如果讲喜趣的话呢？那要反...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"发起\", \"content\": \"同桌如果讲喜趣的话呢？那...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>能够把故事讲用一个，第二个能加上动作，来来第三个能不能表演的更好，哎， 加上表情啊，你来试试...</td>\n",
+       "      <td>能够把故事讲用一个。第二个能加上动作。来来，第三个能不能表演得更好？哎，加上表情啊。你来试试...</td>\n",
+       "      <td>[\\n    {\"type\": \"发起\", \"content\": \"能够把故事讲得用一个。第...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\\n\\n\"type\": \"发起\",\\n\\n\"c...</td>\n",
+       "      <td>[{\"type\":\"讲解\",\"content\":\"能够把故事讲用一个。第二个能加上动作。\"}...</td>\n",
+       "      <td>[\\n  {\"type\":\"发起\",\"content\":\"能够把故事讲用一个。\"},\\n  ...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"能够把故事讲用一个。第二个能...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"发起\", \"content\": \"能够把故事讲用一个。第二...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>不行，你按照老师的要求去做， 请坐，要批评， 你等会儿三十秒的话都到我这来，一定要积极思考，...</td>\n",
+       "      <td>不行，你按照老师的要求去做。请坐。要批评。你等会儿三十秒的话都到我这来。一定要积极思考，不是...</td>\n",
+       "      <td>[\\n{\\n\"type\":\"评价\",\\n\"content\":\"不行，你按照老师的要求去做。\"...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\\n\\n\"type\": \"其它\",\\n\\n\"c...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"不行，你按照老师的要求去做。...</td>\n",
+       "      <td>[\\n  {\"type\":\"其它\", \"content\":\"不行，你按照老师的要求去做。请坐...</td>\n",
+       "      <td>\\n{\"type\":\"评价\",\"content\":\"不行，你按照老师的要求去做。要批评。\"}...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"批评\", \"content\": \"不行，你按照老师的要求去...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>乌鸦说过了，咱们不重复， 你不着急吗？ 意思就是说你会着急的，是不是啊意思一样啊，好，很好，...</td>\n",
+       "      <td>乌鸦说过了，咱们不重复。你不着急吗？意思就是说你会着急的，是不是啊？意思一样啊。好，很好，掌...</td>\n",
+       "      <td>[\\n{\"type\": \"其它\", \"content\": \"乌鸦说过了，咱们不重复。\"},\\...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\\n\\n\"type\": \"讲解\",\\n\\n\"c...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"乌鸦说过了，咱们不重复。你不...</td>\n",
+       "      <td>[\\n  {\"type\":\"其它\", \"content\":\"乌鸦说过了，咱们不重复。你不着急...</td>\n",
+       "      <td>[\\n{\"type\":\"讲解\",\"content\":\"乌鸦说过了，咱们不重复。\"},\\n{\"...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"发起\", \"content\": \"你不着急吗？意思就是说你...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>你有什么话， 想对他说说，汤子晨，你说，嗯，请坐，不要光听别人要有自己的想法，是不是，好，你...</td>\n",
+       "      <td>你有什么话，想对他说说？汤子晨，你说。嗯，请坐。不要光听别人，要有自己的想法，是不是？好，你...</td>\n",
+       "      <td>[\\n{\\n\"type\": \"发起\",\\n\"content\": \"你有什么话，想对他说说？汤...</td>\n",
+       "      <td>{\\n  \"result\": [\\n    {\\n\\n\"type\": \"发起\",\\n\\n\"c...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"你有什么话，想对他说说？\"}...</td>\n",
+       "      <td>[\\n  {\"type\":\"发起\",\"content\":\"你有什么话，想对他说说？汤子晨，你...</td>\n",
+       "      <td>[\\n  {\"type\": \"发起\", \"content\": \"你有什么话，想对他说说？汤子...</td>\n",
+       "      <td>\\n[\\n  {\"type\": \"发起\", \"content\": \"你有什么话，想对他说说？...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "\n",
+    "[{\"type\":\"评价\",\"content\":\"不行，你按照老师的要求去做。要批评。\"},\n",
+    "{\"type\":\"其它\",\"content\":\"请坐。你等会儿三十秒的话都到我这来。\"},\n",
+    "{\"type\":\"讲解\",\"content\":\"一定要积极思考，不是自己坐在那里。想不读就不读。还有，也不是在那里随便想讲话就讲话。\"},\n",
+    "{\"type\":\"发起\",\"content\":\"你坐端正，坐好，快点坐下来。\"},\n",
+    "{\"type\":\"发起\",\"content\":\"对，没有举手的我也要请。上课，就要积极开动脑筋。像上次开汇总课一样。每个同学都认真举手。\"},\n",
+    "{\"type\":\"发起\",\"content\":\"好，往下面来。你是读喜鹊的话啊。喜鹊来啊，喜鹊小喜鹊停来上来来表演啊。\"},\n",
+    "{\"type\":\"其它\",\"content\":\"忘记了，可以稍微看一下啊。杏四桃三。请坐啊。\"},\n",
+    "{\"type\":\"评价\",\"content\":\"虽然她讲的不流畅啊，但是他确实是勇敢的上台。而且他刚刚坐在下面是认真听的啊。\"},\n",
+    "{\"type\":\"讲解\",\"content\":\"最起码比下面不敢举手的小朋友要勇敢。这一点我就要鼓励。\"},\n",
+    "{\"type\":\"发起\",\"content\":\"你是喜鹊来。再请只喜鹊。\"},\n",
+    "{\"type\":\"评价\",\"content\":\"喜鹊没有刚刚乌鸦讲的好。\"},\n",
+    "{\"type\":\"发起\",\"content\":\"对，我要请只非常棒的小喜鹊。\"},\n",
+    "{\"type\":\"其它\",\"content\":\"嗯，哎，掌声鼓励。\"},\n",
+    "{\"type\":\"讲解\",\"content\":\"但是讲小故事的小朋友不是背书，可以加上动作。像刚刚几只小乌鸦就扮演的非常好啊。\"},\n",
+    "{\"type\":\"发起\",\"content\":\"好，接下来请来演小杜鹃。好的，你来。\"},\n",
+    "{\"type\":\"其它\",\"content\":\"嗯，我的书在上面。\"},\n",
+    "{\"type\":\"发起\",\"content\":\"你实在忘记了，可以看一下提示啊。\"},\n",
+    "{\"type\":\"发起\",\"content\":\"你有这个耐心吗？你前面用过了，前面乌鸦已经说过了。\"},\n",
+    "{\"type\":\"其它\",\"content\":\"请坐好，掌声鼓励一下。\"},\n",
+    "{\"type\":\"评价\",\"content\":\"小杜鹃有点严肃啊。\"},\n",
+    "{\"type\":\"讲解\",\"content\":\"好啦，这小杜鹃可爱一点，活泼一点。猴哥猴哥，着急一点好不好？\"},\n",
+    "{\"type\":\"发起\",\"content\":\"来，谁再来演一演？你来罗若涵。\"},\n",
+    "{\"type\":\"发起\",\"content\":\"结果你有这么大耐心吗？\"},\n",
+    "{\"type\":\"发起\",\"content\":\"你有这个耐心，谁说过了啊。\"}\n",
+    "]"
+   ],
+   "id": "8ee1e69f5da82133"
   }
  ],
  "metadata": {
