更改目录结构。
并在evaluate.py中重新增加了计算“发起”的召回率和精准率代码。

--- a/test.ipynb
+++ b/test.ipynb
@@ -1562,31 +1562,18 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "\n",
-    "[{\"type\":\"评价\",\"content\":\"不行，你按照老师的要求去做。要批评。\"},\n",
-    "{\"type\":\"其它\",\"content\":\"请坐。你等会儿三十秒的话都到我这来。\"},\n",
-    "{\"type\":\"讲解\",\"content\":\"一定要积极思考，不是自己坐在那里。想不读就不读。还有，也不是在那里随便想讲话就讲话。\"},\n",
-    "{\"type\":\"发起\",\"content\":\"你坐端正，坐好，快点坐下来。\"},\n",
-    "{\"type\":\"发起\",\"content\":\"对，没有举手的我也要请。上课，就要积极开动脑筋。像上次开汇总课一样。每个同学都认真举手。\"},\n",
-    "{\"type\":\"发起\",\"content\":\"好，往下面来。你是读喜鹊的话啊。喜鹊来啊，喜鹊小喜鹊停来上来来表演啊。\"},\n",
-    "{\"type\":\"其它\",\"content\":\"忘记了，可以稍微看一下啊。杏四桃三。请坐啊。\"},\n",
-    "{\"type\":\"评价\",\"content\":\"虽然她讲的不流畅啊，但是他确实是勇敢的上台。而且他刚刚坐在下面是认真听的啊。\"},\n",
-    "{\"type\":\"讲解\",\"content\":\"最起码比下面不敢举手的小朋友要勇敢。这一点我就要鼓励。\"},\n",
-    "{\"type\":\"发起\",\"content\":\"你是喜鹊来。再请只喜鹊。\"},\n",
-    "{\"type\":\"评价\",\"content\":\"喜鹊没有刚刚乌鸦讲的好。\"},\n",
-    "{\"type\":\"发起\",\"content\":\"对，我要请只非常棒的小喜鹊。\"},\n",
-    "{\"type\":\"其它\",\"content\":\"嗯，哎，掌声鼓励。\"},\n",
-    "{\"type\":\"讲解\",\"content\":\"但是讲小故事的小朋友不是背书，可以加上动作。像刚刚几只小乌鸦就扮演的非常好啊。\"},\n",
-    "{\"type\":\"发起\",\"content\":\"好，接下来请来演小杜鹃。好的，你来。\"},\n",
-    "{\"type\":\"其它\",\"content\":\"嗯，我的书在上面。\"},\n",
-    "{\"type\":\"发起\",\"content\":\"你实在忘记了，可以看一下提示啊。\"},\n",
-    "{\"type\":\"发起\",\"content\":\"你有这个耐心吗？你前面用过了，前面乌鸦已经说过了。\"},\n",
-    "{\"type\":\"其它\",\"content\":\"请坐好，掌声鼓励一下。\"},\n",
-    "{\"type\":\"评价\",\"content\":\"小杜鹃有点严肃啊。\"},\n",
-    "{\"type\":\"讲解\",\"content\":\"好啦，这小杜鹃可爱一点，活泼一点。猴哥猴哥，着急一点好不好？\"},\n",
-    "{\"type\":\"发起\",\"content\":\"来，谁再来演一演？你来罗若涵。\"},\n",
-    "{\"type\":\"发起\",\"content\":\"结果你有这么大耐心吗？\"},\n",
-    "{\"type\":\"发起\",\"content\":\"你有这个耐心，谁说过了啊。\"}\n",
+    "[\n",
+    "  {\"type\":\"其它\", \"content\":\"乌鸦说过了，咱们不重复。你不着急吗？意思就是说你会着急的，是不是啊？意思一样啊。\"},\n",
+    "  {\"type\":\"评价\", \"content\":\"好，很好，掌声鼓励。\"},\n",
+    "  {\"type\":\"讲解\", \"content\":\"听了三只鸟儿的话，猴子可有想法了。猴子是怎么想的？听了乌鸦的话，猴子一想，你们瞧，可等不及，也等不及，还是等不及。说明这只猴子越来越没有耐心。他越来越没有耐心了，是吧？\"},\n",
+    "  {\"type\":\"发起\", \"content\":\"现在呀我们拿起书本，把这个故事啊从头到尾再来背一背。用上刚刚老师教你们的，咱们去把故事啊讲流利讲通顺，然后讲的有感情啊。\"},\n",
+    "  {\"type\":\"发起\", \"content\":\"猴子种了一棵梨树苗，预备起。\"},\n",
+    "  {\"type\":\"其它\", \"content\":\"猴子，这些东西放下，我们来看一下板书。猴子呀他一开始很勤劳啊，还是种了一棵梨树。\"},\n",
+    "  {\"type\":\"讲解\", \"content\":\"可是当乌鸦来劝说它的时候，它就拔掉了梨树，改种了。正当杏树成活的时候，喜鹊来劝他了。于是猴子又拔掉了，改种了桃树。正当桃树成活的时候，杜鹃又来劝说它了。这时候猴子又拔掉了，改种了。可是有一句农谚叫，樱桃好吃，树难栽，一连几年都没有栽活。到最后这只猴子什么树也没有成。\"},\n",
+    "  {\"type\":\"讲解\", \"content\":\"对呀，这只猴子什么树也没有种成。除了它没耐心，它还没什么？\"},\n",
+    "  {\"type\":\"评价\", \"content\":\"你说，说的真好。\"},\n",
+    "  {\"type\":\"讲解\", \"content\":\"还没有主见，别人说什么他就听什么，没有自己的想法，是不是啊？到最后什么都没有啊。\"},\n",
+    "  {\"type\":\"发起\", \"content\":\"那么这只小猴呢，也挺可怜的。你想对他说什么？\"}\n",
     "]"
    ],
    "id": "8ee1e69f5da82133"
